<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.SettingsFragment"
    android:background="@color/colorBackground"
    >

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/stepGoal"
        android:background="@drawable/border">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_target"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_step_goal"
            android:textSize="20dp"
            android:layout_marginLeft="70dp"
            android:layout_centerVertical="true"
            android:textColor="@color/colorTitle"/>

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/stepGoalValues"-->
        <!--android:text="500"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_marginRight="50dp"-->
        <!--android:textColor="@color/colorWaveView"-->
        <!--/>-->
        <Spinner
            android:id="@+id/spnStepGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/colorText">

        </Spinner>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sensitivity"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/stepGoal"
        android:background="@drawable/border">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_controls1"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sensitivity"
            android:textSize="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorTitle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sensitivity_note"
            android:textSize="15dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="45dp"
            android:textColor="@color/colorText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sensitivityValues"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginRight="50dp"
            android:textColor="@color/colorWaveView"/>

        <Spinner
            android:id="@+id/spnSensitivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/colorText">

        </Spinner>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/weight"
        android:layout_below="@+id/sensitivity"
        android:background="@drawable/border">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_weight1"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_weight"
            android:textSize="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorTitle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_weight_note"
            android:textSize="15dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/colorText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weightValues"
            android:layout_marginTop="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="50dp"
            android:textColor="@color/colorWaveView"/>

        <Spinner
            android:id="@+id/spnWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/colorText"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/weight"
        android:background="@drawable/border">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gender"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_gender"
            android:textColor="@color/colorTitle"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="40dp"
            android:text="@string/text_gender_note"
            android:textColor="@color/colorText"
            android:textSize="15dp" />

        <Spinner
            android:id="@+id/spnGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/colorText" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/stepLength"
        android:layout_below="@+id/gender"
        android:background="@drawable/border">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_footstep"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_step_length"
            android:textSize="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorTitle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_step_length_note"
            android:textSize="15dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/colorText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stepLengthValues"
            android:text="cm"
            android:layout_marginTop="25dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="50dp"
            android:textColor="@color/colorWaveView"/>

        <Spinner
            android:id="@+id/spnStepLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/colorText"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/firstDay"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/stepLength"
        android:background="@drawable/border">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_date_start"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="70dp"
            android:text="@string/text_first_day"
            android:textColor="@color/colorTitle"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/firstDayValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="50dp"
            android:text="Select"
            android:textColor="@color/colorWaveView" />

        <Spinner
            android:id="@+id/spnFirstDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/colorText"></Spinner>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nothing"
        android:layout_below="@+id/firstDay"
        android:layout_width="match_parent"
        android:layout_height="5dp">
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/guide"
        android:layout_below="@+id/nothing"
        android:background="@drawable/border">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_guide"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_guide"
            android:textSize="20dp"
            android:layout_marginLeft="70dp"
            android:layout_centerVertical="true"
            android:textColor="@color/colorTitle"/>

    </RelativeLayout>

</RelativeLayout>